--- a/public/style.css
+++ b/public/style.css
@@ -113,7 +113,7 @@ ul {
 
 .chatArea {
   height: 100%;
-  padding-bottom: 60px;
+  padding: 100px 0 60px 0;
 }
 
 .messages {
@@ -152,13 +152,14 @@ ul {
 
 .navtop {
   width: 100%;
-  height: 45px;
+  height: 85px;
   top: 0;
   position: fixed;
   background-color: #222222;
 }
 
 .navtop ul {
+  text-align: center;
   padding:0px;
   margin: 0px;
   list-style:none;
@@ -169,5 +170,6 @@ ul {
 }
 
 .dice {
-  border: 1px solid red;
+  width: 80px;
+  height: 80px;
 }
